# GlassHelix

./: .gitignore  .gitmodules  CMakeLists.txt
Classifier/: extractCounts.py  preprocess.py
PrototypeGH_SAE/: Transformer.py
archive/: BidirectionalMap.hh  CMakeListsbackup.txt
data/preprocess/: classifier.py  preprocessMultiomeFB.py
scratches/: dumpArrow.py
src/: AsynchronousArray.hh  Block.hh  Cell.cc  Cell.hh  Cell.inl  Dataset.hh  DeviceMacros.hh  Dictionary.hh  Feature.hh  Genome.hh  GlassHelix.hh  Graph.cppm  MapMatrix.hh  Sequence.hh  TranscriptomeEncoder.hh  main.cc
src/BioLogic/: Cell.cppm  Cell.hh  Feature.cc  Feature.cppm  Feature.inl  Sequence.cc  Sequence.cppm  Sequence.hh  Sequence.inl
src/Dataset/: Block.hh  Dataset.hh  Dictionary.hh
src/GlassEtch/: GlassEtch.hh  TranscriptomeEncoder.cuh
src/GlassHelix/: GeneTokenizer.cppm  GlassHelix.hh  GlassHelix.ixx
src/GlassHelix/data/structures/: BidirectionalMap.cppm  BidirectionalMap.hh  Dictionary.cppm  Dictionary.hh  SparseMatrix.cppm  SparseMatrix.hh
src/GlassHelix/nn/primitives/: Attention.cppm  Perceptron.cppm
src/GlassHelix/nn/transformer/: TorchTransformer.hh
src/GlassHelix/nn/transformer/torch/: Attention.cppm
src/GlassHelix/nn/transformer/virtual/: Embedder.cppm  Tokenizer.cppm  Transformer.cppm
src/GlassHelix/prototypes/1_SAE_GC30M/: Transformer.py
src/Graph/: Graph.cppm  Graph.hh  Graph.inl  GraphBindings.cpp
src/Graph/python/: GraphBindings.cpp
src/Layers/: SparseReader.cuh
src/SparseMatrix/: CooMatrix.hh  CoordinateList.hh  CsrMatrix.hh  DictionaryOfKeys.hh  DokMatrix.hh  ISparseMatrix.hh
src/autoencoder/: Binarizer.cuh  Binarizer.hh  BinaryAutoencoder.hh
src/data/: Block.hh  Dataset.cc  Dataset.hh  Dictionary.cc  Dictionary.hh  Dictionary.inl
src/data/structures/: BidirectionalMap.hh  Dictionary.hh
src/data/tests/: BlockPerformanceTest.cpp  BlockTest.cpp  DictionaryTest.cpp
src/include/: DeviceMacros.cuh  DeviceMatrix.cuh  Types.cuh  cuda_helpers.cuh  deviceMacros.cuh  macros.cuh  macros.h  matrix.cuh  scatter.cuh  sigmoid.cuh  sigmoid.h  types.cuh
src/incomplete/: Genome.hh  GlassHelix.cc  GlassHelix.hh
src/incomplete/Graph/: Graph.cc  Graph.hh
src/incomplete/Layers/: SparseReader.cuh
src/incomplete/nn/primitives/: Attention.hh
src/incomplete/nn/primitives/torch/: TorchAttention.cppm
src/incomplete/prototype/: SparseAutoencoder.hh  dumpTokenDict.py
src/memory/: AsynchronousArray.hh  Dataset.hh  Dictionary.hh  Feature.hh
src/memory/SparseMatrix/: CompressedSparseRow.hh  CsrDevice.hh  IRandomAccess.hh
src/memory/tests/: BlockPerformanceTest.cpp  LoadDSTest.cpp  SequenceTest.cpp
src/models/GlassEtch/: GlassEtch.hh
src/models/GlassEtch/include/: encode.cuh  scatter.cuh  types.cuh
src/models/GlassEtch/src/: GlassEtch.cuh  GlassEtch.hh  main.cc
src/models/GlassHelix/: GlassHelix.hh
src/nn/primitives/: Linear.cppm
src/nn/transformer/: TorchTransformer.cc
src/prototype/: SparseAutoencoder.hh  dumpArrow.py  dumpTokenDict.py
src/tests/: BlockPerformanceTest.cpp  BlockTest.cpp  DictionaryTest.cpp  LoadDSTest.cpp  SequenceTest.cpp
src/tests/network/: Network.hh  NetworkLogic.hh
